# soul-diary

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
soul_diary/: cli.py  service.py
soul_diary/backend/: __init__.py  cli.py  service.py
soul_diary/backend/api/: __init__.py  cli.py  dependencies.py  exceptions.py  handlers.py  router.py  schemas.py  service.py  settings.py
soul_diary/backend/api/senses/: dependencies.py  handlers.py  router.py  schemas.py
soul_diary/backend/database/: __init__.py  cli.py  models.py  service.py  settings.py
soul_diary/backend/database/migrations/: env.py
soul_diary/backend/database/migrations/versions/: bce1e66bb101_init.py  ed569caafd85_change_indexes.py
soul_diary/ui/: __init__.py  cli.py  entrypoint.py  service.py
soul_diary/ui/app/: __init__.py  app.py  local_storage.py  middleware.py  models.py  routes.py
soul_diary/ui/app/backend/: base.py  exceptions.py  local.py  models.py  soul.py  utils.py
soul_diary/ui/app/controls/: utils.py
soul_diary/ui/app/middlewares/: base.py
soul_diary/ui/app/pages/: base.py  sense.py  sense_list.py
soul_diary/ui/app/pages/auth/: backend.py  choose_backend.py  login.py  soul_backend_data.py  soul_server.py
soul_diary/ui/app/pages/sense_add/: body.py  desires.py  emotions.py  feelings.py
soul_diary/ui/app/views/: auth.py  base.py  exceptions.py  sense.py  sense_add.py  sense_list.py
soul_diary/ui/web/: __init__.py  cli.py  service.py  settings.py
