[tool.poetry]
name = "soul-diary"
version = "0.0.1"
description = ""
authors = ["Oleg Yurchik <oleg@yurchik.space>"]
readme = "README.md"
include = [
  "soul_diary",
]

[tool.poetry.dependencies]
# extras
aiosqlite = { version = "^0.19.0", optional = true }
asyncpg = { version = "^0.28.0", optional = true }

# main
python = "^3.10"
uvicorn = "^0.24.0.post1"
facet = "^0.9.1"
pydantic = "^2.5.2"
typer = "^0.9.0"
pydantic-settings = "^2.1.0"

[tool.poetry.extras]
sqlite = ["aiosqlite"]
postgres = ["asyncpg"]

[tool.poetry.group.backend.dependencies]
fastapi = "0.101.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
bcrypt = "^4.1.1"

[tool.poetry.group.ui.dependencies]
flet = "^0.14.0"
flet-route = "^0.3.2"
flet-fastapi = "^0.14.0"
pycryptodomex = "^3.19.0"
yarl = "^1.9.4"
httpx = "0.24.1"
packaging = "23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
